tests/netedit/basic/configs/netecfg/load/invalid/demands/errors.netedit
Error: Cannot read file 'dummy.rou.xml'!
Error: Loading of dummy.rou.xml failed.
